Finalización de carga csv a sql

--- a/templates/finish.html
+++ b/templates/finish.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row mt-4">
         <div class="col-6 alert alert-success">
-          Proceso finalizado.
+          🚀🚀🚀 Registros insertados de forma satisfactoria. 🚀🚀🚀
         </div>
         <div class="col-6 text-end">
           <a href="{{ url_for('home') }}">
